gcc/testsuite/rust/rustc/ui/methods/issues/issue-84495.rs
fn main() {
    let x: i32 = 1;
    println!("{:?}", x.count()); // { dg-error ".E0599." "" { target *-*-* } }
}

